--- a/Mathenian/Mathenian.Android/Mathenian.Android.csproj
+++ b/Mathenian/Mathenian.Android/Mathenian.Android.csproj
@@ -105,5 +105,8 @@
       <Name>Mathenian</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\mathenian.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
