--- a/Mathenian/Mathenian.Android/Mathenian.Android.csproj
+++ b/Mathenian/Mathenian.Android/Mathenian.Android.csproj
@@ -108,5 +108,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\mathenian.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\arithmetic.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
